--- a/admin/config.yml
+++ b/admin/config.yml
@@ -18,6 +18,7 @@ collections:
       - label: News
         name: news
         widget: "list"
+        fields:
           - {label: "News tytuł", name: "news-title", widget: string}
           - {label: "News tło", name: "news-background", widget: image}
           - {label: "News link", name: "news-link", widget: string}
