--- a/admin/config.yml
+++ b/admin/config.yml
@@ -26,7 +26,7 @@ collections:
         fields:
           - label: "News"
             name: "news"
-            widget: "object"
+            widget: "list"
             allow_add: true
             fields:
               - {label: "News tytuł", name: "news-title", widget: string}
