--- a/admin/config.yml
+++ b/admin/config.yml
@@ -19,15 +19,14 @@ collections:
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Opis", name: "description", widget: "string"}
       - {label: "Layout", name: "layout", widget: "hidden", default: "landing"}
-      - label: "News List"
+      - label: "Lista newsów"
         name: "news-list"
-        widget: "object"
+        widget: "list"
         allow_add: true
         fields:
           - label: "News"
             name: "news"
-            widget: "list"
-            allow_add: true
+            widget: "object"
             fields:
               - {label: "News tytuł", name: "news-title", widget: string}
               - {label: "News tło", name: "news-background", widget: image}
