--- a/admin/config.yml
+++ b/admin/config.yml
@@ -28,6 +28,6 @@ collections:
           - name: "news"
             widget: "object"
             fields:
-              - {label: "News tytuł", name: "news-title", widget: string}
-              - {label: "News tło", name: "news-background", widget: image}
-              - {label: "News link", name: "news-link", widget: string}
+              - {label: "News tytuł", name: "title", widget: string}
+              - {label: "News tło", name: "background", widget: image}
+              - {label: "News link", name: "link", widget: string}
