--- a/_config.yml
+++ b/_config.yml
@@ -44,9 +44,10 @@ defaults:
     values:
       layout: 'post'
       description: ' '
+      image: ''
 
 
-permalink: /news/:title
+permalink: /news/:slug
 # Build settings
 markdown: kramdown
 theme: minima
