--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.20.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-flex-carousel": "^1.1.0",
     "react-hot-loader": "^4.0.0-beta.21",
     "react-markdown": "^3.1.0",
     "react-moment": "^0.7.0",
@@ -24,6 +25,9 @@
   },
   "devDependencies": {
     "eslint-config-react-tools": "1.x.x",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "serve": "^6.1.0"
   }
 }
