--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -41,18 +41,18 @@ collections:
     create: true
     slug: "{{slug}}"
     fields:
+      - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
       - label: "Pola SEO"
         name: "seo"
         widget: "object"
         fields:
-          - {label: "Opis tytuł", name: "meta_title", widget: "string"}
+          - {label: "Tytuł meta", name: "meta_title", widget: "string"}
           - {label: "Opis meta(150)", name: "meta_description", widget: "string"}
-      - {label: "Title", name: "title", widget: "string"}
+      - {label: "Tytuł artykułu", name: "title", widget: "string"}
       - {label: "Slug(url)", name: "slug", widget: "string"}
-      - {label: "Data publikacji", name: "publication_date", widget: date}
-      - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
-      - {label: "Data rozpoczęcia wydarzenia", name: "from", widget: "date", default: "", format: "D MMMM"}
-      - {label: "Data zakończenia wydarzenia", name: "to", widget: "date", default: "", format: "D MMMM YYYY"}
+      - {label: "Data publikacji", name: "publication_date", widget: "date"}
+      - {label: "Data rozpoczęcia wydarzenia", name: "start_date", widget: "date", default: "", format: "D MMMM"}
+      - {label: "Data zakończenia wydarzenia", name: "end_date", widget: "date", default: "", format: "D MMMM YYYY"}
       - label: "Główny punkt wydarzenia"
         name: "event_main_point"
         widget: "object"
@@ -60,6 +60,8 @@ collections:
           - {label: "Nazwa głównego punktu wydarzenia", name: "main_point_name", widget: "string"}
           - {label: "Data głównego punktu wydarzenia", name: "main_point_datetime", widget: "datetime", default: "", format: "D.M.YYYY, kk:mm"}
       - {label: "Obrazek główny", name: "image", widget: image}
+      - {label: "Treść artykułu", name: "body", widget: "markdown"}
+      - {label: "Patronat medialny(logo patrona)", name: "patronage", widget: "image"}
   -
     name: "reports"
     label: "Relacje"
