--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-markdown": "^3.1.0",
     "react-moment": "^0.7.0",
     "react-router": "^4.2.0",
-    "react-static": "^5.1.10"
+    "react-static": "^5.1.10",
+    "react-truncate": "^2.4.0"
   },
   "devDependencies": {
     "eslint-config-react-tools": "^1.1.6",
