--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -73,7 +73,7 @@ collections:
       - label: "Obrazek główny"
         name: "main_image"
         widget: "image"
-      - {label: "Treść artykułu", name: "body", widget: "markdown"}
+      - {label: "Treść artykułu", name: "content", widget: "markdown"}
       - label: "Pola dodatkowe"
         name: "additional_fields"
         widget: "object"
@@ -118,7 +118,7 @@ collections:
       - label: "Obrazek główny"
         name: "main_image"
         widget: "image"
-      - {label: "Treść artykułu", name: "body", widget: "markdown"}
+      - {label: "Treść artykułu", name: "content", widget: "markdown"}
       - label: "Pola dodatkowe"
         name: "additional_fields"
         widget: "object"
@@ -126,9 +126,9 @@ collections:
           - {label: "Patronat Artinfo", name: "artinfo_patronage", widget: "boolean"}
           - {label: "Miejsce wystawy", name: "exhibition_location", widget: "string"}
           - {label: "Post wyróżniony", name: "featured", widget: "string"}
-      - {label: "Artyści", name: "artists", widget: "string"}
-      - {label: "Galerie", name: "galleries", widget: "string"}
-      - {label: "Patroni medialni", name: "patronage", widget: "string"}
+      - {label: "Artyści", name: "artists", widget: "string", required: false}
+      - {label: "Galerie", name: "galleries", widget: "string", required: false}
+      - {label: "Patroni medialni", name: "patronage", widget: "string", required: false}
       - label: "Galeria"
         name: "image_gallery"
         widget: "image"
